# inv8080rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cpu.rs  emu.rs  lib.rs  main.rs  tests.rs  utils.rs
src/cpu/: mod.rs  tests.rs
src/emu/: mod.rs
src/utils/: mod.rs
