[package]
name = "inv8080rs"
version = "0.2.0"
description = "Intel 8080 Space Invaders Emulator"
authors = ["Fredrik Andersson"]
license = "MIT"
categories = ["emulators", "games"]
keywords = ["emulator", "arcade", "8-bit", "intel-8080"]
edition = "2021"

[dependencies]
sdl2 = "*"

# Some optimizations for dev builds (from Bevvy docs)
# [profile.dev]
# opt-level = 1

[profile.dev.package."*"]
opt-level = 3
